--- a/tests/cassettes/test_shipment_create_with_ids.yaml
+++ b/tests/cassettes/test_shipment_create_with_ids.yaml
@@ -22,9 +22,13 @@ interactions:
     uri: https://api.easypost.com/v2/addresses
   response:
     body:
-      string: '{"id":"adr_76a2cd08cbe811ec8d21ac1f6bc7b362","object":"Address","created_at":"2022-05-04T20:26:22+00:00","updated_at":"2022-05-04T20:26:22+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}}'
+      string: '{"id": "adr_5a9b1bcf0eaf11eda11fac1f6bc72124", "object": "Address",
+        "created_at": "2022-07-28T19:56:22+00:00", "updated_at": "2022-07-28T19:56:22+00:00",
+        "name": "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St",
+        "street2": "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107",
+        "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test",
+        "carrier_facility": null, "residential": null, "federal_tax_id": null, "state_tax_id":
+        null, "verifications": {}}'
     headers:
       cache-control:
       - no-cache, no-store
@@ -33,11 +37,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"cf3eeb02e7aa70343d6107060b89fa1a"
+      - W/"ee16f1ffc76f78209f9f9534b8802444"
       expires:
       - '0'
       location:
-      - /api/v2/addresses/adr_76a2cd08cbe811ec8d21ac1f6bc7b362
+      - /api/v2/addresses/adr_5a9b1bcf0eaf11eda11fac1f6bc72124
       pragma:
       - no-cache
       referrer-policy:
@@ -53,20 +57,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 78245fb66272e16ee786b9020013b05c
+      - 3843703e62e2e9e5ff23e2bf003436b7
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb4nuq
+      - bigweb3nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq fde591f008
-      - extlb2nuq c51cdb8bf2
+      - intlb2nuq 403f17ff97
+      - intlb1wdc 403f17ff97
+      - extlb4wdc 403f17ff97
       x-runtime:
-      - '0.031807'
+      - '0.031695'
       x-version-label:
-      - easypost-202205041833-02730cc398-master
+      - easypost-202207272329-7f74c9e58c-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -95,9 +100,13 @@ interactions:
     uri: https://api.easypost.com/v2/addresses
   response:
     body:
-      string: '{"id":"adr_76b17473cbe811ec8d25ac1f6bc7b362","object":"Address","created_at":"2022-05-04T20:26:22+00:00","updated_at":"2022-05-04T20:26:22+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}}'
+      string: '{"id": "adr_5ab5bcd10eaf11eda042ac1f6bc7b362", "object": "Address",
+        "created_at": "2022-07-28T19:56:22+00:00", "updated_at": "2022-07-28T19:56:22+00:00",
+        "name": "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St",
+        "street2": "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107",
+        "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test",
+        "carrier_facility": null, "residential": null, "federal_tax_id": null, "state_tax_id":
+        null, "verifications": {}}'
     headers:
       cache-control:
       - no-cache, no-store
@@ -106,11 +115,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"6af45bc12e30887609cd8bd0766ab653"
+      - W/"6d712a042336eb7617da3ccedcc12333"
       expires:
       - '0'
       location:
-      - /api/v2/addresses/adr_76b17473cbe811ec8d25ac1f6bc7b362
+      - /api/v2/addresses/adr_5ab5bcd10eaf11eda042ac1f6bc7b362
       pragma:
       - no-cache
       referrer-policy:
@@ -126,20 +135,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 78245fb66272e16ee786b9020013b063
+      - 3843703e62e2e9e6ff23e2bf003436c4
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb2nuq
+      - bigweb8nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq fde591f008
-      - extlb2nuq c51cdb8bf2
+      - intlb2nuq 403f17ff97
+      - intlb1wdc 403f17ff97
+      - extlb4wdc 403f17ff97
       x-runtime:
-      - '0.030072'
+      - '0.027463'
       x-version-label:
-      - easypost-202205041833-02730cc398-master
+      - easypost-202207272329-7f74c9e58c-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -166,7 +176,10 @@ interactions:
     uri: https://api.easypost.com/v2/parcels
   response:
     body:
-      string: '{"id":"prcl_7c5092538a614fc7ab31bcd118ca79f3","object":"Parcel","created_at":"2022-05-04T20:26:22Z","updated_at":"2022-05-04T20:26:22Z","length":10.0,"width":8.0,"height":4.0,"predefined_package":null,"weight":15.4,"mode":"test"}'
+      string: '{"id": "prcl_52018d604e2f466ea7fc7a46b4fcbe20", "object": "Parcel",
+        "created_at": "2022-07-28T19:56:22Z", "updated_at": "2022-07-28T19:56:22Z",
+        "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
+        15.4, "mode": "test"}'
     headers:
       cache-control:
       - no-cache, no-store
@@ -175,11 +188,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"3213613d6b31031f1803e86d71ec745b"
+      - W/"b6d5d12678ee9b475bf988ab7f98cc95"
       expires:
       - '0'
       location:
-      - /api/v2/parcels.prcl_7c5092538a614fc7ab31bcd118ca79f3
+      - /api/v2/parcels.prcl_52018d604e2f466ea7fc7a46b4fcbe20
       pragma:
       - no-cache
       referrer-policy:
@@ -195,29 +208,30 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 78245fb66272e16ee786b9020013b066
+      - 3843703e62e2e9e6ff23e2bf003436cd
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb4nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq fde591f008
-      - extlb2nuq c51cdb8bf2
+      - intlb1nuq 403f17ff97
+      - intlb2wdc 403f17ff97
+      - extlb4wdc 403f17ff97
       x-runtime:
-      - '0.021809'
+      - '0.022036'
       x-version-label:
-      - easypost-202205041833-02730cc398-master
+      - easypost-202207272329-7f74c9e58c-master
       x-xss-protection:
       - 1; mode=block
     status:
       code: 201
       message: Created
 - request:
-    body: '{"shipment": {"from_address": {"id": "adr_76a2cd08cbe811ec8d21ac1f6bc7b362"},
-      "to_address": {"id": "adr_76b17473cbe811ec8d25ac1f6bc7b362"}, "parcel": {"id":
-      "prcl_7c5092538a614fc7ab31bcd118ca79f3"}}}'
+    body: '{"shipment": {"from_address": {"id": "adr_5a9b1bcf0eaf11eda11fac1f6bc72124"},
+      "to_address": {"id": "adr_5ab5bcd10eaf11eda042ac1f6bc7b362"}, "parcel": {"id":
+      "prcl_52018d604e2f466ea7fc7a46b4fcbe20"}}, "carbon_offset": false}'
     headers:
       Accept:
       - '*/*'
@@ -226,7 +240,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '199'
+      - '223'
       Content-Type:
       - application/json
       authorization:
@@ -237,28 +251,83 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at":"2022-05-04T20:26:22Z","is_return":false,"messages":[],"mode":"test","options":{"currency":"USD","payment":{"type":"SENDER"},"date_advance":0},"reference":null,"status":"unknown","tracking_code":null,"updated_at":"2022-05-04T20:26:22Z","batch_id":null,"batch_status":null,"batch_message":null,"customs_info":null,"from_address":{"id":"adr_76a2cd08cbe811ec8d21ac1f6bc7b362","object":"Address","created_at":"2022-05-04T20:26:22+00:00","updated_at":"2022-05-04T20:26:22+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"insurance":null,"order_id":null,"parcel":{"id":"prcl_7c5092538a614fc7ab31bcd118ca79f3","object":"Parcel","created_at":"2022-05-04T20:26:22Z","updated_at":"2022-05-04T20:26:22Z","length":10.0,"width":8.0,"height":4.0,"predefined_package":null,"weight":15.4,"mode":"test"},"postage_label":null,"rates":[{"id":"rate_d6ee31e86b5e421eb48ddac570974cbe","object":"Rate","created_at":"2022-05-04T20:26:22Z","updated_at":"2022-05-04T20:26:22Z","mode":"test","service":"ParcelSelect","carrier":"USPS","rate":"7.22","currency":"USD","retail_rate":"7.22","retail_currency":"USD","list_rate":"7.22","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_8ed97268ed0b4992aa49cd2fed4ac621","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_d03dd7fe2a1d43c0a3a0f21f35beef46","object":"Rate","created_at":"2022-05-04T20:26:22Z","updated_at":"2022-05-04T20:26:22Z","mode":"test","service":"Priority","carrier":"USPS","rate":"7.37","currency":"USD","retail_rate":"8.70","retail_currency":"USD","list_rate":"7.37","list_currency":"USD","delivery_days":1,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":1,"shipment_id":"shp_8ed97268ed0b4992aa49cd2fed4ac621","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_f7be9a005e514a30859bc6cb42d669d6","object":"Rate","created_at":"2022-05-04T20:26:22Z","updated_at":"2022-05-04T20:26:22Z","mode":"test","service":"First","carrier":"USPS","rate":"5.49","currency":"USD","retail_rate":"5.49","retail_currency":"USD","list_rate":"5.49","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_8ed97268ed0b4992aa49cd2fed4ac621","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_76c84b05a12d42328d81ae7b3bb89825","object":"Rate","created_at":"2022-05-04T20:26:22Z","updated_at":"2022-05-04T20:26:22Z","mode":"test","service":"Express","carrier":"USPS","rate":"23.75","currency":"USD","retail_rate":"27.40","retail_currency":"USD","list_rate":"23.75","list_currency":"USD","delivery_days":null,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":null,"shipment_id":"shp_8ed97268ed0b4992aa49cd2fed4ac621","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"}],"refund_status":null,"scan_form":null,"selected_rate":null,"tracker":null,"to_address":{"id":"adr_76b17473cbe811ec8d25ac1f6bc7b362","object":"Address","created_at":"2022-05-04T20:26:22+00:00","updated_at":"2022-05-04T20:26:22+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"usps_zone":1,"return_address":{"id":"adr_76a2cd08cbe811ec8d21ac1f6bc7b362","object":"Address","created_at":"2022-05-04T20:26:22+00:00","updated_at":"2022-05-04T20:26:22+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"buyer_address":{"id":"adr_76b17473cbe811ec8d25ac1f6bc7b362","object":"Address","created_at":"2022-05-04T20:26:22+00:00","updated_at":"2022-05-04T20:26:22+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"forms":[],"fees":[],"id":"shp_8ed97268ed0b4992aa49cd2fed4ac621","object":"Shipment"}'
+      string: '{"created_at": "2022-07-28T19:56:22Z", "is_return": false, "messages":
+        [], "mode": "test", "options": {"currency": "USD", "payment": {"type": "SENDER"},
+        "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
+        null, "updated_at": "2022-07-28T19:56:22Z", "batch_id": null, "batch_status":
+        null, "batch_message": null, "customs_info": null, "from_address": {"id":
+        "adr_5a9b1bcf0eaf11eda11fac1f6bc72124", "object": "Address", "created_at":
+        "2022-07-28T19:56:22+00:00", "updated_at": "2022-07-28T19:56:22+00:00", "name":
+        "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St", "street2":
+        "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
+        "US", "phone": "5555555555", "email": null, "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_52018d604e2f466ea7fc7a46b4fcbe20",
+        "object": "Parcel", "created_at": "2022-07-28T19:56:22Z", "updated_at": "2022-07-28T19:56:22Z",
+        "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
+        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_504995ecd50445168efdf7f8952a46c8",
+        "object": "Rate", "created_at": "2022-07-28T19:56:22Z", "updated_at": "2022-07-28T19:56:22Z",
+        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "7.22",
+        "currency": "USD", "retail_rate": "7.22", "retail_currency": "USD", "list_rate":
+        "7.22", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        2, "shipment_id": "shp_f45ce7aeef1f4c6eb8ecd3025d9c8ff1", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_743cd2c7dac840c3977a6150463c7607",
+        "object": "Rate", "created_at": "2022-07-28T19:56:22Z", "updated_at": "2022-07-28T19:56:22Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.37",
+        "currency": "USD", "retail_rate": "8.70", "retail_currency": "USD", "list_rate":
+        "7.37", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        1, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        1, "shipment_id": "shp_f45ce7aeef1f4c6eb8ecd3025d9c8ff1", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_9e4a8ff32c0a4a78a851cf4d6eb120fb",
+        "object": "Rate", "created_at": "2022-07-28T19:56:22Z", "updated_at": "2022-07-28T19:56:22Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.49", "currency":
+        "USD", "retail_rate": "5.49", "retail_currency": "USD", "list_rate": "5.49",
+        "list_currency": "USD", "billing_type": "easypost", "delivery_days": 2, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": 2, "shipment_id":
+        "shp_f45ce7aeef1f4c6eb8ecd3025d9c8ff1", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_1fa963d6cd54453dbb7690456c40fc2a", "object": "Rate", "created_at":
+        "2022-07-28T19:56:22Z", "updated_at": "2022-07-28T19:56:22Z", "mode": "test",
+        "service": "Express", "carrier": "USPS", "rate": "23.75", "currency": "USD",
+        "retail_rate": "27.40", "retail_currency": "USD", "list_rate": "23.75", "list_currency":
+        "USD", "billing_type": "easypost", "delivery_days": null, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": null, "shipment_id":
+        "shp_f45ce7aeef1f4c6eb8ecd3025d9c8ff1", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "refund_status": null, "scan_form": null, "selected_rate": null, "tracker":
+        null, "to_address": {"id": "adr_5ab5bcd10eaf11eda042ac1f6bc7b362", "object":
+        "Address", "created_at": "2022-07-28T19:56:22+00:00", "updated_at": "2022-07-28T19:56:22+00:00",
+        "name": "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St",
+        "street2": "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107",
+        "country": "US", "phone": "5555555555", "email": null, "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "usps_zone": 1, "return_address": {"id": "adr_5a9b1bcf0eaf11eda11fac1f6bc72124",
+        "object": "Address", "created_at": "2022-07-28T19:56:22+00:00", "updated_at":
+        "2022-07-28T19:56:22+00:00", "name": "Jack Sparrow", "company": "EasyPost",
+        "street1": "388 Townsend St", "street2": "Apt 20", "city": "San Francisco",
+        "state": "CA", "zip": "94107", "country": "US", "phone": "5555555555", "email":
+        null, "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
+        null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
+        "adr_5ab5bcd10eaf11eda042ac1f6bc7b362", "object": "Address", "created_at":
+        "2022-07-28T19:56:22+00:00", "updated_at": "2022-07-28T19:56:22+00:00", "name":
+        "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St", "street2":
+        "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
+        "US", "phone": "5555555555", "email": null, "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "forms": [], "fees": [], "id": "shp_f45ce7aeef1f4c6eb8ecd3025d9c8ff1",
+        "object": "Shipment"}'
     headers:
       cache-control:
       - no-cache, no-store
       content-length:
-      - '4729'
+      - '4833'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"30e78265fa6eecd06353d9df1987f3e8"
+      - W/"720999d42689d82e7eea5e072d6ea179"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_8ed97268ed0b4992aa49cd2fed4ac621
+      - /api/v2/shipments/shp_f45ce7aeef1f4c6eb8ecd3025d9c8ff1
       pragma:
       - no-cache
       referrer-policy:
@@ -274,20 +343,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 78245fb66272e16ee786b9020013b06b
+      - 3843703e62e2e9e6ff23e2bf003436d7
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb6nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq fde591f008
-      - extlb2nuq c51cdb8bf2
+      - intlb2nuq 403f17ff97
+      - intlb2wdc 403f17ff97
+      - extlb4wdc 403f17ff97
       x-runtime:
-      - '0.255081'
+      - '0.278955'
       x-version-label:
-      - easypost-202205041833-02730cc398-master
+      - easypost-202207272329-7f74c9e58c-master
       x-xss-protection:
       - 1; mode=block
     status:
