--- a/tests/cassettes/test_shipment_get_lowest_smartrate.yaml
+++ b/tests/cassettes/test_shipment_get_lowest_smartrate.yaml
@@ -5,7 +5,8 @@ interactions:
       "state": "CA", "zip": "94107", "phone": "5555555555"}, "from_address": {"name":
       "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St", "street2":
       "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "phone": "5555555555"},
-      "parcel": {"length": "10", "width": "8", "height": "4", "weight": "15.4"}}}'
+      "parcel": {"length": "10", "width": "8", "height": "4", "weight": "15.4"}},
+      "carbon_offset": false}'
     headers:
       Accept:
       - '*/*'
@@ -14,7 +15,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '477'
+      - '501'
       Content-Type:
       - application/json
       authorization:
@@ -25,28 +26,83 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at":"2022-05-04T20:26:24Z","is_return":false,"messages":[],"mode":"test","options":{"currency":"USD","payment":{"type":"SENDER"},"date_advance":0},"reference":null,"status":"unknown","tracking_code":null,"updated_at":"2022-05-04T20:26:24Z","batch_id":null,"batch_status":null,"batch_message":null,"customs_info":null,"from_address":{"id":"adr_7804e92bcbe811eca58eac1f6bc72124","object":"Address","created_at":"2022-05-04T20:26:24+00:00","updated_at":"2022-05-04T20:26:24+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"insurance":null,"order_id":null,"parcel":{"id":"prcl_bff25ff71c6f47e7a5df9edcd5853de4","object":"Parcel","created_at":"2022-05-04T20:26:24Z","updated_at":"2022-05-04T20:26:24Z","length":10.0,"width":8.0,"height":4.0,"predefined_package":null,"weight":15.4,"mode":"test"},"postage_label":null,"rates":[{"id":"rate_0d1598a88c6d448fabba046ba602504a","object":"Rate","created_at":"2022-05-04T20:26:25Z","updated_at":"2022-05-04T20:26:25Z","mode":"test","service":"ParcelSelect","carrier":"USPS","rate":"7.22","currency":"USD","retail_rate":"7.22","retail_currency":"USD","list_rate":"7.22","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_2b1ce8b41e5b4b14b88bc81577a1888e","object":"Rate","created_at":"2022-05-04T20:26:25Z","updated_at":"2022-05-04T20:26:25Z","mode":"test","service":"First","carrier":"USPS","rate":"5.49","currency":"USD","retail_rate":"5.49","retail_currency":"USD","list_rate":"5.49","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_8da980fb97214472a34e60ddaa953b16","object":"Rate","created_at":"2022-05-04T20:26:25Z","updated_at":"2022-05-04T20:26:25Z","mode":"test","service":"Express","carrier":"USPS","rate":"23.75","currency":"USD","retail_rate":"27.40","retail_currency":"USD","list_rate":"23.75","list_currency":"USD","delivery_days":null,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":null,"shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_88bb96e6d40147a3b3ca6a205c547288","object":"Rate","created_at":"2022-05-04T20:26:25Z","updated_at":"2022-05-04T20:26:25Z","mode":"test","service":"Priority","carrier":"USPS","rate":"7.37","currency":"USD","retail_rate":"8.70","retail_currency":"USD","list_rate":"7.37","list_currency":"USD","delivery_days":1,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":1,"shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"}],"refund_status":null,"scan_form":null,"selected_rate":null,"tracker":null,"to_address":{"id":"adr_7802ff50cbe811ec95fbac1f6b0a0d1e","object":"Address","created_at":"2022-05-04T20:26:24+00:00","updated_at":"2022-05-04T20:26:24+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"usps_zone":1,"return_address":{"id":"adr_7804e92bcbe811eca58eac1f6bc72124","object":"Address","created_at":"2022-05-04T20:26:24+00:00","updated_at":"2022-05-04T20:26:24+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"buyer_address":{"id":"adr_7802ff50cbe811ec95fbac1f6b0a0d1e","object":"Address","created_at":"2022-05-04T20:26:24+00:00","updated_at":"2022-05-04T20:26:24+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"forms":[],"fees":[],"id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","object":"Shipment"}'
+      string: '{"created_at": "2022-07-28T20:27:07Z", "is_return": false, "messages":
+        [], "mode": "test", "options": {"currency": "USD", "payment": {"type": "SENDER"},
+        "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
+        null, "updated_at": "2022-07-28T20:27:07Z", "batch_id": null, "batch_status":
+        null, "batch_message": null, "customs_info": null, "from_address": {"id":
+        "adr_a6c06f4a0eb311ed88c6ac1f6bc7b362", "object": "Address", "created_at":
+        "2022-07-28T20:27:07+00:00", "updated_at": "2022-07-28T20:27:07+00:00", "name":
+        "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St", "street2":
+        "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
+        "US", "phone": "5555555555", "email": null, "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_844752fd3d2c4a8ca62d24a6c1b3bddf",
+        "object": "Parcel", "created_at": "2022-07-28T20:27:07Z", "updated_at": "2022-07-28T20:27:07Z",
+        "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
+        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_6348100939da4b9cabbe18532fa4d6e4",
+        "object": "Rate", "created_at": "2022-07-28T20:27:07Z", "updated_at": "2022-07-28T20:27:07Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.37",
+        "currency": "USD", "retail_rate": "8.70", "retail_currency": "USD", "list_rate":
+        "7.37", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        1, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        1, "shipment_id": "shp_d048d20d5490480184a3c776a26d1010", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_d860fe82abb0436cb840b00f1d3bdadc",
+        "object": "Rate", "created_at": "2022-07-28T20:27:07Z", "updated_at": "2022-07-28T20:27:07Z",
+        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "7.22",
+        "currency": "USD", "retail_rate": "7.22", "retail_currency": "USD", "list_rate":
+        "7.22", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        2, "shipment_id": "shp_d048d20d5490480184a3c776a26d1010", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_970f492ca9304f679b30c0fa9bff563d",
+        "object": "Rate", "created_at": "2022-07-28T20:27:07Z", "updated_at": "2022-07-28T20:27:07Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.49", "currency":
+        "USD", "retail_rate": "5.49", "retail_currency": "USD", "list_rate": "5.49",
+        "list_currency": "USD", "billing_type": "easypost", "delivery_days": 2, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": 2, "shipment_id":
+        "shp_d048d20d5490480184a3c776a26d1010", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_20f3907766704e368bc28fbe3c09a08e", "object": "Rate", "created_at":
+        "2022-07-28T20:27:07Z", "updated_at": "2022-07-28T20:27:07Z", "mode": "test",
+        "service": "Express", "carrier": "USPS", "rate": "23.75", "currency": "USD",
+        "retail_rate": "27.40", "retail_currency": "USD", "list_rate": "23.75", "list_currency":
+        "USD", "billing_type": "easypost", "delivery_days": null, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": null, "shipment_id":
+        "shp_d048d20d5490480184a3c776a26d1010", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "refund_status": null, "scan_form": null, "selected_rate": null, "tracker":
+        null, "to_address": {"id": "adr_a6be96f90eb311ed8de0ac1f6bc7bdc6", "object":
+        "Address", "created_at": "2022-07-28T20:27:07+00:00", "updated_at": "2022-07-28T20:27:07+00:00",
+        "name": "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St",
+        "street2": "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107",
+        "country": "US", "phone": "5555555555", "email": null, "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "usps_zone": 1, "return_address": {"id": "adr_a6c06f4a0eb311ed88c6ac1f6bc7b362",
+        "object": "Address", "created_at": "2022-07-28T20:27:07+00:00", "updated_at":
+        "2022-07-28T20:27:07+00:00", "name": "Jack Sparrow", "company": "EasyPost",
+        "street1": "388 Townsend St", "street2": "Apt 20", "city": "San Francisco",
+        "state": "CA", "zip": "94107", "country": "US", "phone": "5555555555", "email":
+        null, "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
+        null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
+        "adr_a6be96f90eb311ed8de0ac1f6bc7bdc6", "object": "Address", "created_at":
+        "2022-07-28T20:27:07+00:00", "updated_at": "2022-07-28T20:27:07+00:00", "name":
+        "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St", "street2":
+        "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
+        "US", "phone": "5555555555", "email": null, "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "forms": [], "fees": [], "id": "shp_d048d20d5490480184a3c776a26d1010",
+        "object": "Shipment"}'
     headers:
       cache-control:
       - no-cache, no-store
       content-length:
-      - '4729'
+      - '4833'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"04a868aa9320370213340ce772fde969"
+      - W/"cb94e825c64464526b200cbe51b487b3"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_a75e7ef9f90f4d69a3197e1fd5dce15b
+      - /api/v2/shipments/shp_d048d20d5490480184a3c776a26d1010
       pragma:
       - no-cache
       referrer-policy:
@@ -62,20 +118,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 78245fb56272e170e786b9060013b0f3
+      - efdf9e0562e2f11bff23eb220001e8d2
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb5nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq fde591f008
-      - extlb2nuq c51cdb8bf2
+      - intlb1nuq 403f17ff97
+      - intlb1wdc 403f17ff97
+      - extlb4wdc 403f17ff97
       x-runtime:
-      - '0.312797'
+      - '0.236483'
       x-version-label:
-      - easypost-202205041833-02730cc398-master
+      - easypost-202207272329-7f74c9e58c-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -95,10 +152,44 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/shipments/shp_a75e7ef9f90f4d69a3197e1fd5dce15b/smartrate
+    uri: https://api.easypost.com/v2/shipments/shp_d048d20d5490480184a3c776a26d1010/smartrate
   response:
     body:
-      string: '{"result":[{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-05-04T20:26:25Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":2,"est_delivery_days":2,"id":"rate_0d1598a88c6d448fabba046ba602504a","list_currency":"USD","list_rate":7.22,"mode":"test","object":"Rate","rate":7.22,"retail_currency":"USD","retail_rate":7.22,"service":"ParcelSelect","shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","time_in_transit":{"percentile_50":1,"percentile_75":2,"percentile_85":3,"percentile_90":3,"percentile_95":4,"percentile_97":5,"percentile_99":7},"updated_at":"2022-05-04T20:26:25Z"},{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-05-04T20:26:25Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":2,"est_delivery_days":2,"id":"rate_2b1ce8b41e5b4b14b88bc81577a1888e","list_currency":"USD","list_rate":5.49,"mode":"test","object":"Rate","rate":5.49,"retail_currency":"USD","retail_rate":5.49,"service":"First","shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","time_in_transit":{"percentile_50":1,"percentile_75":1,"percentile_85":1,"percentile_90":2,"percentile_95":2,"percentile_97":2,"percentile_99":3},"updated_at":"2022-05-04T20:26:25Z"},{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-05-04T20:26:25Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":null,"est_delivery_days":null,"id":"rate_8da980fb97214472a34e60ddaa953b16","list_currency":"USD","list_rate":23.75,"mode":"test","object":"Rate","rate":23.75,"retail_currency":"USD","retail_rate":27.4,"service":"Express","shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","time_in_transit":{"percentile_50":1,"percentile_75":1,"percentile_85":1,"percentile_90":1,"percentile_95":2,"percentile_97":2,"percentile_99":4},"updated_at":"2022-05-04T20:26:25Z"},{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-05-04T20:26:25Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":1,"est_delivery_days":1,"id":"rate_88bb96e6d40147a3b3ca6a205c547288","list_currency":"USD","list_rate":7.37,"mode":"test","object":"Rate","rate":7.37,"retail_currency":"USD","retail_rate":8.7,"service":"Priority","shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","time_in_transit":{"percentile_50":1,"percentile_75":1,"percentile_85":1,"percentile_90":1,"percentile_95":2,"percentile_97":2,"percentile_99":3},"updated_at":"2022-05-04T20:26:25Z"}]}'
+      string: '{"result": [{"carrier": "USPS", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e",
+        "created_at": "2022-07-28T20:27:07Z", "currency": "USD", "delivery_date":
+        null, "delivery_date_guaranteed": false, "delivery_days": 1, "est_delivery_days":
+        1, "id": "rate_6348100939da4b9cabbe18532fa4d6e4", "list_currency": "USD",
+        "list_rate": 7.37, "mode": "test", "object": "Rate", "rate": 7.37, "retail_currency":
+        "USD", "retail_rate": 8.7, "service": "Priority", "shipment_id": "shp_d048d20d5490480184a3c776a26d1010",
+        "time_in_transit": {"percentile_50": 1, "percentile_75": 1, "percentile_85":
+        2, "percentile_90": 2, "percentile_95": 2, "percentile_97": 3, "percentile_99":
+        6}, "updated_at": "2022-07-28T20:27:07Z"}, {"carrier": "USPS", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e", "created_at": "2022-07-28T20:27:07Z",
+        "currency": "USD", "delivery_date": null, "delivery_date_guaranteed": false,
+        "delivery_days": 2, "est_delivery_days": 2, "id": "rate_d860fe82abb0436cb840b00f1d3bdadc",
+        "list_currency": "USD", "list_rate": 7.22, "mode": "test", "object": "Rate",
+        "rate": 7.22, "retail_currency": "USD", "retail_rate": 7.22, "service": "ParcelSelect",
+        "shipment_id": "shp_d048d20d5490480184a3c776a26d1010", "time_in_transit":
+        {"percentile_50": 2, "percentile_75": 3, "percentile_85": 3, "percentile_90":
+        4, "percentile_95": 5, "percentile_97": 5, "percentile_99": 8}, "updated_at":
+        "2022-07-28T20:27:07Z"}, {"carrier": "USPS", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e",
+        "created_at": "2022-07-28T20:27:07Z", "currency": "USD", "delivery_date":
+        null, "delivery_date_guaranteed": false, "delivery_days": 2, "est_delivery_days":
+        2, "id": "rate_970f492ca9304f679b30c0fa9bff563d", "list_currency": "USD",
+        "list_rate": 5.49, "mode": "test", "object": "Rate", "rate": 5.49, "retail_currency":
+        "USD", "retail_rate": 5.49, "service": "First", "shipment_id": "shp_d048d20d5490480184a3c776a26d1010",
+        "time_in_transit": {"percentile_50": 1, "percentile_75": 1, "percentile_85":
+        2, "percentile_90": 2, "percentile_95": 2, "percentile_97": 2, "percentile_99":
+        3}, "updated_at": "2022-07-28T20:27:07Z"}, {"carrier": "USPS", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e", "created_at": "2022-07-28T20:27:07Z",
+        "currency": "USD", "delivery_date": null, "delivery_date_guaranteed": false,
+        "delivery_days": null, "est_delivery_days": null, "id": "rate_20f3907766704e368bc28fbe3c09a08e",
+        "list_currency": "USD", "list_rate": 23.75, "mode": "test", "object": "Rate",
+        "rate": 23.75, "retail_currency": "USD", "retail_rate": 27.4, "service": "Express",
+        "shipment_id": "shp_d048d20d5490480184a3c776a26d1010", "time_in_transit":
+        {"percentile_50": 1, "percentile_75": 1, "percentile_85": 1, "percentile_90":
+        2, "percentile_95": 2, "percentile_97": 2, "percentile_99": 4}, "updated_at":
+        "2022-07-28T20:27:07Z"}]}'
     headers:
       cache-control:
       - no-cache, no-store
@@ -107,7 +198,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"28249fac14a5226903a47218e0b2853b"
+      - W/"7fb33224755085477c3631fab1561ca7"
       expires:
       - '0'
       pragma:
@@ -125,7 +216,7 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 78245fb56272e171e786b9060013b110
+      - efdf9e0562e2f11cff23eb220001e8ed
       x-frame-options:
       - SAMEORIGIN
       x-node:
@@ -133,12 +224,13 @@ interactions:
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq fde591f008
-      - extlb2nuq c51cdb8bf2
+      - intlb2nuq 403f17ff97
+      - intlb1wdc 403f17ff97
+      - extlb4wdc 403f17ff97
       x-runtime:
-      - '0.063599'
+      - '0.085026'
       x-version-label:
-      - easypost-202205041833-02730cc398-master
+      - easypost-202207272329-7f74c9e58c-master
       x-xss-protection:
       - 1; mode=block
     status:
