--- a/tests/cassettes/test_shipment_create.yaml
+++ b/tests/cassettes/test_shipment_create.yaml
@@ -11,7 +11,7 @@ interactions:
       "none", "non_delivery_option": "return", "customs_items": [{"description": "Sweet
       shirts", "quantity": 2, "weight": 11, "value": 23, "hs_tariff_number": "654321",
       "origin_country": "US"}]}, "options": {"label_format": "PNG", "invoice_number":
-      "123"}, "reference": "123"}}'
+      "123"}, "reference": "123"}, "carbon_offset": false}'
     headers:
       Accept:
       - '*/*'
@@ -20,7 +20,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '932'
+      - '956'
       Content-Type:
       - application/json
       authorization:
@@ -31,30 +31,94 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at":"2022-05-04T20:26:10Z","is_return":false,"messages":[],"mode":"test","options":{"label_format":"PNG","invoice_number":"123","currency":"USD","payment":{"type":"SENDER"},"date_advance":0},"reference":"123","status":"unknown","tracking_code":null,"updated_at":"2022-05-04T20:26:10Z","batch_id":null,"batch_status":null,"batch_message":null,"customs_info":{"id":"cstinfo_5bb96b03dd4f4ccea7375d6946efad61","object":"CustomsInfo","created_at":"2022-05-04T20:26:10Z","updated_at":"2022-05-04T20:26:10Z","contents_explanation":"","contents_type":"merchandise","customs_certify":true,"customs_signer":"Steve
-        Brule","eel_pfc":"NOEEI 30.37(a)","non_delivery_option":"return","restriction_comments":null,"restriction_type":"none","mode":"test","declaration":null,"customs_items":[{"id":"cstitem_453498ba5db94695b0e75637429a295d","object":"CustomsItem","created_at":"2022-05-04T20:26:10Z","updated_at":"2022-05-04T20:26:10Z","description":"Sweet
-        shirts","hs_tariff_number":"654321","origin_country":"US","quantity":2,"value":"23.0","weight":11.0,"code":null,"mode":"test","manufacturer":null,"currency":null,"eccn":null,"printed_commodity_identifier":null}]},"from_address":{"id":"adr_6f938385cbe811ecaae7ac1f6bc7bdc6","object":"Address","created_at":"2022-05-04T20:26:10+00:00","updated_at":"2022-05-04T20:26:10+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"insurance":null,"order_id":null,"parcel":{"id":"prcl_1b3ceb0abe5e491cbd1787867b3c38a8","object":"Parcel","created_at":"2022-05-04T20:26:10Z","updated_at":"2022-05-04T20:26:10Z","length":10.0,"width":8.0,"height":4.0,"predefined_package":null,"weight":15.4,"mode":"test"},"postage_label":null,"rates":[{"id":"rate_0fc3dbb71e054bc9aec3ce9cae3ab6a8","object":"Rate","created_at":"2022-05-04T20:26:10Z","updated_at":"2022-05-04T20:26:10Z","mode":"test","service":"ParcelSelect","carrier":"USPS","rate":"7.22","currency":"USD","retail_rate":"7.22","retail_currency":"USD","list_rate":"7.22","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_ca6ea74a3f77456d85b30a4fbefd304c","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_626b02e9e0b84114a19d2d8825a943a4","object":"Rate","created_at":"2022-05-04T20:26:10Z","updated_at":"2022-05-04T20:26:10Z","mode":"test","service":"Priority","carrier":"USPS","rate":"7.37","currency":"USD","retail_rate":"8.70","retail_currency":"USD","list_rate":"7.37","list_currency":"USD","delivery_days":1,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":1,"shipment_id":"shp_ca6ea74a3f77456d85b30a4fbefd304c","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_1f0fb17b527c4511853563024f15f009","object":"Rate","created_at":"2022-05-04T20:26:10Z","updated_at":"2022-05-04T20:26:10Z","mode":"test","service":"First","carrier":"USPS","rate":"5.49","currency":"USD","retail_rate":"5.49","retail_currency":"USD","list_rate":"5.49","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_ca6ea74a3f77456d85b30a4fbefd304c","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_c292a85b48f941f18e0e692e4084bf0f","object":"Rate","created_at":"2022-05-04T20:26:10Z","updated_at":"2022-05-04T20:26:10Z","mode":"test","service":"Express","carrier":"USPS","rate":"23.75","currency":"USD","retail_rate":"27.40","retail_currency":"USD","list_rate":"23.75","list_currency":"USD","delivery_days":null,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":null,"shipment_id":"shp_ca6ea74a3f77456d85b30a4fbefd304c","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"}],"refund_status":null,"scan_form":null,"selected_rate":null,"tracker":null,"to_address":{"id":"adr_6f91db53cbe811eca3f4ac1f6bc72124","object":"Address","created_at":"2022-05-04T20:26:10+00:00","updated_at":"2022-05-04T20:26:10+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"usps_zone":1,"return_address":{"id":"adr_6f938385cbe811ecaae7ac1f6bc7bdc6","object":"Address","created_at":"2022-05-04T20:26:10+00:00","updated_at":"2022-05-04T20:26:10+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"buyer_address":{"id":"adr_6f91db53cbe811eca3f4ac1f6bc72124","object":"Address","created_at":"2022-05-04T20:26:10+00:00","updated_at":"2022-05-04T20:26:10+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"forms":[],"fees":[],"id":"shp_ca6ea74a3f77456d85b30a4fbefd304c","object":"Shipment"}'
+      string: '{"created_at": "2022-07-28T19:56:09Z", "is_return": false, "messages":
+        [], "mode": "test", "options": {"label_format": "PNG", "invoice_number": "123",
+        "currency": "USD", "payment": {"type": "SENDER"}, "date_advance": 0}, "reference":
+        "123", "status": "unknown", "tracking_code": null, "updated_at": "2022-07-28T19:56:09Z",
+        "batch_id": null, "batch_status": null, "batch_message": null, "customs_info":
+        {"id": "cstinfo_a469b9b3e07c44d99ac5a661d8511eeb", "object": "CustomsInfo",
+        "created_at": "2022-07-28T19:56:09Z", "updated_at": "2022-07-28T19:56:09Z",
+        "contents_explanation": "", "contents_type": "merchandise", "customs_certify":
+        true, "customs_signer": "Steve Brule", "eel_pfc": "NOEEI 30.37(a)", "non_delivery_option":
+        "return", "restriction_comments": null, "restriction_type": "none", "mode":
+        "test", "declaration": null, "customs_items": [{"id": "cstitem_974e27617226427398b18e0f3dabb96a",
+        "object": "CustomsItem", "created_at": "2022-07-28T19:56:09Z", "updated_at":
+        "2022-07-28T19:56:09Z", "description": "Sweet shirts", "hs_tariff_number":
+        "654321", "origin_country": "US", "quantity": 2, "value": "23.0", "weight":
+        11.0, "code": null, "mode": "test", "manufacturer": null, "currency": null,
+        "eccn": null, "printed_commodity_identifier": null}]}, "from_address": {"id":
+        "adr_52f7f6360eaf11ed9941ac1f6bc7b362", "object": "Address", "created_at":
+        "2022-07-28T19:56:09+00:00", "updated_at": "2022-07-28T19:56:09+00:00", "name":
+        "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St", "street2":
+        "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
+        "US", "phone": "5555555555", "email": null, "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_1b8ebda4e8934370847599a190af3d5f",
+        "object": "Parcel", "created_at": "2022-07-28T19:56:09Z", "updated_at": "2022-07-28T19:56:09Z",
+        "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
+        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_5c1764f9223a4041b717d6b0025d3000",
+        "object": "Rate", "created_at": "2022-07-28T19:56:09Z", "updated_at": "2022-07-28T19:56:09Z",
+        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "23.75",
+        "currency": "USD", "retail_rate": "27.40", "retail_currency": "USD", "list_rate":
+        "23.75", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        null, "shipment_id": "shp_514cd79a702f43468be986aaef79a086", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_83856f26b1e24274b5af238c3908f6da",
+        "object": "Rate", "created_at": "2022-07-28T19:56:09Z", "updated_at": "2022-07-28T19:56:09Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.37",
+        "currency": "USD", "retail_rate": "8.70", "retail_currency": "USD", "list_rate":
+        "7.37", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        1, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        1, "shipment_id": "shp_514cd79a702f43468be986aaef79a086", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_a46de7bc8bd14244836be6e7d219d81c",
+        "object": "Rate", "created_at": "2022-07-28T19:56:09Z", "updated_at": "2022-07-28T19:56:09Z",
+        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "7.22",
+        "currency": "USD", "retail_rate": "7.22", "retail_currency": "USD", "list_rate":
+        "7.22", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        2, "shipment_id": "shp_514cd79a702f43468be986aaef79a086", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_a4bbc85140f141e1bee0f2c6f44de07a",
+        "object": "Rate", "created_at": "2022-07-28T19:56:09Z", "updated_at": "2022-07-28T19:56:09Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.49", "currency":
+        "USD", "retail_rate": "5.49", "retail_currency": "USD", "list_rate": "5.49",
+        "list_currency": "USD", "billing_type": "easypost", "delivery_days": 2, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": 2, "shipment_id":
+        "shp_514cd79a702f43468be986aaef79a086", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "refund_status": null, "scan_form": null, "selected_rate": null, "tracker":
+        null, "to_address": {"id": "adr_52f63d760eaf11ed993fac1f6bc7b362", "object":
+        "Address", "created_at": "2022-07-28T19:56:09+00:00", "updated_at": "2022-07-28T19:56:09+00:00",
+        "name": "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St",
+        "street2": "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107",
+        "country": "US", "phone": "5555555555", "email": null, "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "usps_zone": 1, "return_address": {"id": "adr_52f7f6360eaf11ed9941ac1f6bc7b362",
+        "object": "Address", "created_at": "2022-07-28T19:56:09+00:00", "updated_at":
+        "2022-07-28T19:56:09+00:00", "name": "Jack Sparrow", "company": "EasyPost",
+        "street1": "388 Townsend St", "street2": "Apt 20", "city": "San Francisco",
+        "state": "CA", "zip": "94107", "country": "US", "phone": "5555555555", "email":
+        null, "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
+        null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
+        "adr_52f63d760eaf11ed993fac1f6bc7b362", "object": "Address", "created_at":
+        "2022-07-28T19:56:09+00:00", "updated_at": "2022-07-28T19:56:09+00:00", "name":
+        "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St", "street2":
+        "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
+        "US", "phone": "5555555555", "email": null, "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "forms": [], "fees": [], "id": "shp_514cd79a702f43468be986aaef79a086",
+        "object": "Shipment"}'
     headers:
       cache-control:
       - no-cache, no-store
       content-length:
-      - '5563'
+      - '5667'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"48a92d961b556d8b10d58bac596709cb"
+      - W/"bfc5cc6894a77a82c54f5295b91a106e"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_ca6ea74a3f77456d85b30a4fbefd304c
+      - /api/v2/shipments/shp_514cd79a702f43468be986aaef79a086
       pragma:
       - no-cache
       referrer-policy:
@@ -65,25 +129,28 @@ interactions:
       - chunked
       x-backend:
       - easypost
+      x-canary:
+      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 62b330bb6272e162e786b8df00162a6e
+      - b0657e3e62e2e9d9ff23e29c0033c952
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb8nuq
+      - bigweb7nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq fde591f008
-      - extlb1nuq c51cdb8bf2
+      - intlb1nuq 403f17ff97
+      - intlb1wdc 403f17ff97
+      - extlb3wdc 403f17ff97
       x-runtime:
-      - '0.320368'
+      - '0.293240'
       x-version-label:
-      - easypost-202205041833-02730cc398-master
+      - easypost-202207272329-7f74c9e58c-master
       x-xss-protection:
       - 1; mode=block
     status:
