--- a/tests/cassettes/test_shipment_create_with_carbon_offset.yaml
+++ b/tests/cassettes/test_shipment_create_with_carbon_offset.yaml
@@ -26,68 +26,68 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at": "2022-07-27T22:03:59Z", "is_return": false, "messages":
+      string: '{"created_at": "2022-07-28T19:56:25Z", "is_return": false, "messages":
         [], "mode": "test", "options": {"currency": "USD", "payment": {"type": "SENDER"},
         "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
-        null, "updated_at": "2022-07-27T22:03:59Z", "batch_id": null, "batch_status":
+        null, "updated_at": "2022-07-28T19:56:25Z", "batch_id": null, "batch_status":
         null, "batch_message": null, "customs_info": null, "from_address": {"id":
-        "adr_042f98b90df811edb981ac1f6bc7bdc6", "object": "Address", "created_at":
-        "2022-07-27T22:03:59+00:00", "updated_at": "2022-07-27T22:03:59+00:00", "name":
+        "adr_5c7ba6d70eaf11ed9122ac1f6bc7bdc6", "object": "Address", "created_at":
+        "2022-07-28T19:56:25+00:00", "updated_at": "2022-07-28T19:56:25+00:00", "name":
         "EasyPost", "company": null, "street1": "417 Montgomery Street", "street2":
         "5th Floor", "city": "San Francisco", "state": "CA", "zip": "94104", "country":
         "US", "phone": "4153334445", "email": "support@easypost.com", "mode": "test",
         "carrier_facility": null, "residential": null, "federal_tax_id": null, "state_tax_id":
         null, "verifications": {}}, "insurance": null, "order_id": null, "parcel":
-        {"id": "prcl_de6823bd1edd408f98574ad64478e99b", "object": "Parcel", "created_at":
-        "2022-07-27T22:03:59Z", "updated_at": "2022-07-27T22:03:59Z", "length": 20.2,
+        {"id": "prcl_41e10ed606c0441f9368a8dcafc1d422", "object": "Parcel", "created_at":
+        "2022-07-28T19:56:25Z", "updated_at": "2022-07-28T19:56:25Z", "length": 20.2,
         "width": 10.9, "height": 5.0, "predefined_package": null, "weight": 65.9,
-        "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_10369e47b8b148e3bf680daed2d9087b",
-        "object": "Rate", "created_at": "2022-07-27T22:03:59Z", "updated_at": "2022-07-27T22:03:59Z",
-        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "44.30",
-        "currency": "USD", "retail_rate": "51.00", "retail_currency": "USD", "list_rate":
-        "44.30", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        null, "shipment_id": "shp_b70f120ff3a34c51bdc30db7fde30a7d", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
-        "grams": 154, "price": "0.11", "currency": "USD"}}, {"id": "rate_4a16868146ca454b9e4af9de6a937a2e",
-        "object": "Rate", "created_at": "2022-07-27T22:03:59Z", "updated_at": "2022-07-27T22:03:59Z",
+        "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_27ffd58d25d145be849e5ec137ec430c",
+        "object": "Rate", "created_at": "2022-07-28T19:56:25Z", "updated_at": "2022-07-28T19:56:25Z",
         "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "9.82",
         "currency": "USD", "retail_rate": "13.15", "retail_currency": "USD", "list_rate":
         "9.82", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_b70f120ff3a34c51bdc30db7fde30a7d", "carrier_account_id":
+        2, "shipment_id": "shp_b7892bf189604028895eff184daa363d", "carrier_account_id":
         "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
-        "grams": 154, "price": "0.11", "currency": "USD"}}, {"id": "rate_abc714066fa84d54af39e587cd696f1b",
-        "object": "Rate", "created_at": "2022-07-27T22:03:59Z", "updated_at": "2022-07-27T22:03:59Z",
+        "grams": 154, "price": "0.11", "currency": "USD"}}, {"id": "rate_f74bd58274f64784b124923459df67a3",
+        "object": "Rate", "created_at": "2022-07-28T19:56:25Z", "updated_at": "2022-07-28T19:56:25Z",
+        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "44.30",
+        "currency": "USD", "retail_rate": "51.00", "retail_currency": "USD", "list_rate":
+        "44.30", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        null, "shipment_id": "shp_b7892bf189604028895eff184daa363d", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
+        "grams": 154, "price": "0.11", "currency": "USD"}}, {"id": "rate_e495789abaa84ab2bae55a516d0d4483",
+        "object": "Rate", "created_at": "2022-07-28T19:56:25Z", "updated_at": "2022-07-28T19:56:25Z",
         "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "8.91",
         "currency": "USD", "retail_rate": "8.91", "retail_currency": "USD", "list_rate":
         "8.91", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        5, "shipment_id": "shp_b70f120ff3a34c51bdc30db7fde30a7d", "carrier_account_id":
+        5, "shipment_id": "shp_b7892bf189604028895eff184daa363d", "carrier_account_id":
         "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
         "grams": 154, "price": "0.11", "currency": "USD"}}], "refund_status": null,
         "scan_form": null, "selected_rate": null, "tracker": null, "to_address": {"id":
-        "adr_042dd7030df811edb980ac1f6bc7bdc6", "object": "Address", "created_at":
-        "2022-07-27T22:03:59+00:00", "updated_at": "2022-07-27T22:03:59+00:00", "name":
+        "adr_5c774d780eaf11eda329ac1f6bc72124", "object": "Address", "created_at":
+        "2022-07-28T19:56:25+00:00", "updated_at": "2022-07-28T19:56:25+00:00", "name":
         "Dr. Steve Brule", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
         "phone": "8573875756", "email": "dr_steve_brule@gmail.com", "mode": "test",
         "carrier_facility": null, "residential": null, "federal_tax_id": null, "state_tax_id":
-        null, "verifications": {}}, "usps_zone": 4, "return_address": {"id": "adr_042f98b90df811edb981ac1f6bc7bdc6",
-        "object": "Address", "created_at": "2022-07-27T22:03:59+00:00", "updated_at":
-        "2022-07-27T22:03:59+00:00", "name": "EasyPost", "company": null, "street1":
+        null, "verifications": {}}, "usps_zone": 4, "return_address": {"id": "adr_5c7ba6d70eaf11ed9122ac1f6bc7bdc6",
+        "object": "Address", "created_at": "2022-07-28T19:56:25+00:00", "updated_at":
+        "2022-07-28T19:56:25+00:00", "name": "EasyPost", "company": null, "street1":
         "417 Montgomery Street", "street2": "5th Floor", "city": "San Francisco",
         "state": "CA", "zip": "94104", "country": "US", "phone": "4153334445", "email":
         "support@easypost.com", "mode": "test", "carrier_facility": null, "residential":
         null, "federal_tax_id": null, "state_tax_id": null, "verifications": {}},
-        "buyer_address": {"id": "adr_042dd7030df811edb980ac1f6bc7bdc6", "object":
-        "Address", "created_at": "2022-07-27T22:03:59+00:00", "updated_at": "2022-07-27T22:03:59+00:00",
+        "buyer_address": {"id": "adr_5c774d780eaf11eda329ac1f6bc72124", "object":
+        "Address", "created_at": "2022-07-28T19:56:25+00:00", "updated_at": "2022-07-28T19:56:25+00:00",
         "name": "Dr. Steve Brule", "company": null, "street1": "179 N Harbor Dr",
         "street2": null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country":
         "US", "phone": "8573875756", "email": "dr_steve_brule@gmail.com", "mode":
         "test", "carrier_facility": null, "residential": null, "federal_tax_id": null,
         "state_tax_id": null, "verifications": {}}, "forms": [], "fees": [], "id":
-        "shp_b70f120ff3a34c51bdc30db7fde30a7d", "object": "Shipment"}'
+        "shp_b7892bf189604028895eff184daa363d", "object": "Shipment"}'
     headers:
       cache-control:
       - no-cache, no-store
@@ -96,11 +96,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"f0b5d9afdfa4023ae15a2c93c0edc395"
+      - W/"d9d7be073268e181e17aa801d6c3cfa4"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_b70f120ff3a34c51bdc30db7fde30a7d
+      - /api/v2/shipments/shp_b7892bf189604028895eff184daa363d
       pragma:
       - no-cache
       referrer-policy:
@@ -116,20 +116,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - bdfa366a62e1b64fff2241fa0057387d
+      - 3843703d62e2e9e9ff23e2c30034376c
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb2nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 403f17ff97
-      - extlb2nuq 403f17ff97
+      - intlb1nuq 403f17ff97
+      - intlb2wdc 403f17ff97
+      - extlb4wdc 403f17ff97
       x-runtime:
-      - '0.643110'
+      - '0.643296'
       x-version-label:
-      - easypost-202207272030-717cb56530-master
+      - easypost-202207272329-7f74c9e58c-master
       x-xss-protection:
       - 1; mode=block
     status:
