--- a/tests/cassettes/test_shipment_lowest_rate.yaml
+++ b/tests/cassettes/test_shipment_lowest_rate.yaml
@@ -11,7 +11,7 @@ interactions:
       "none", "non_delivery_option": "return", "customs_items": [{"description": "Sweet
       shirts", "quantity": 2, "weight": 11, "value": 23, "hs_tariff_number": "654321",
       "origin_country": "US"}]}, "options": {"label_format": "PNG", "invoice_number":
-      "123"}, "reference": "123"}}'
+      "123"}, "reference": "123"}, "carbon_offset": false}'
     headers:
       Accept:
       - '*/*'
@@ -20,7 +20,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '932'
+      - '956'
       Content-Type:
       - application/json
       authorization:
@@ -31,30 +31,94 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at":"2022-05-04T20:26:23Z","is_return":false,"messages":[],"mode":"test","options":{"label_format":"PNG","invoice_number":"123","currency":"USD","payment":{"type":"SENDER"},"date_advance":0},"reference":"123","status":"unknown","tracking_code":null,"updated_at":"2022-05-04T20:26:23Z","batch_id":null,"batch_status":null,"batch_message":null,"customs_info":{"id":"cstinfo_27490d3c6a834201b60bb9a20d1b9473","object":"CustomsInfo","created_at":"2022-05-04T20:26:23Z","updated_at":"2022-05-04T20:26:23Z","contents_explanation":"","contents_type":"merchandise","customs_certify":true,"customs_signer":"Steve
-        Brule","eel_pfc":"NOEEI 30.37(a)","non_delivery_option":"return","restriction_comments":null,"restriction_type":"none","mode":"test","declaration":null,"customs_items":[{"id":"cstitem_e1329b6186ca4c2e967dbd45b116629c","object":"CustomsItem","created_at":"2022-05-04T20:26:23Z","updated_at":"2022-05-04T20:26:23Z","description":"Sweet
-        shirts","hs_tariff_number":"654321","origin_country":"US","quantity":2,"value":"23.0","weight":11.0,"code":null,"mode":"test","manufacturer":null,"currency":null,"eccn":null,"printed_commodity_identifier":null}]},"from_address":{"id":"adr_77137445cbe811ec95d7ac1f6b0a0d1e","object":"Address","created_at":"2022-05-04T20:26:23+00:00","updated_at":"2022-05-04T20:26:23+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"insurance":null,"order_id":null,"parcel":{"id":"prcl_25587052df564f78b57b06caf0cf7468","object":"Parcel","created_at":"2022-05-04T20:26:23Z","updated_at":"2022-05-04T20:26:23Z","length":10.0,"width":8.0,"height":4.0,"predefined_package":null,"weight":15.4,"mode":"test"},"postage_label":null,"rates":[{"id":"rate_d8d0b38e584f45eeae02ca00bb8ae2ac","object":"Rate","created_at":"2022-05-04T20:26:23Z","updated_at":"2022-05-04T20:26:23Z","mode":"test","service":"Express","carrier":"USPS","rate":"23.75","currency":"USD","retail_rate":"27.40","retail_currency":"USD","list_rate":"23.75","list_currency":"USD","delivery_days":null,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":null,"shipment_id":"shp_a098dedef5ea41e2b202be32586aad79","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_10d75b3b86cf4047a3f8dc691e328f8c","object":"Rate","created_at":"2022-05-04T20:26:23Z","updated_at":"2022-05-04T20:26:23Z","mode":"test","service":"ParcelSelect","carrier":"USPS","rate":"7.22","currency":"USD","retail_rate":"7.22","retail_currency":"USD","list_rate":"7.22","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_a098dedef5ea41e2b202be32586aad79","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_f316067858b444d1b0f4ac9539e68046","object":"Rate","created_at":"2022-05-04T20:26:23Z","updated_at":"2022-05-04T20:26:23Z","mode":"test","service":"Priority","carrier":"USPS","rate":"7.37","currency":"USD","retail_rate":"8.70","retail_currency":"USD","list_rate":"7.37","list_currency":"USD","delivery_days":1,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":1,"shipment_id":"shp_a098dedef5ea41e2b202be32586aad79","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_49935b0c7d3a433197cae8d9227648bd","object":"Rate","created_at":"2022-05-04T20:26:23Z","updated_at":"2022-05-04T20:26:23Z","mode":"test","service":"First","carrier":"USPS","rate":"5.49","currency":"USD","retail_rate":"5.49","retail_currency":"USD","list_rate":"5.49","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_a098dedef5ea41e2b202be32586aad79","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"}],"refund_status":null,"scan_form":null,"selected_rate":null,"tracker":null,"to_address":{"id":"adr_771197afcbe811ec95d6ac1f6b0a0d1e","object":"Address","created_at":"2022-05-04T20:26:23+00:00","updated_at":"2022-05-04T20:26:23+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"usps_zone":1,"return_address":{"id":"adr_77137445cbe811ec95d7ac1f6b0a0d1e","object":"Address","created_at":"2022-05-04T20:26:23+00:00","updated_at":"2022-05-04T20:26:23+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"buyer_address":{"id":"adr_771197afcbe811ec95d6ac1f6b0a0d1e","object":"Address","created_at":"2022-05-04T20:26:23+00:00","updated_at":"2022-05-04T20:26:23+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"forms":[],"fees":[],"id":"shp_a098dedef5ea41e2b202be32586aad79","object":"Shipment"}'
+      string: '{"created_at": "2022-07-28T19:56:23Z", "is_return": false, "messages":
+        [], "mode": "test", "options": {"label_format": "PNG", "invoice_number": "123",
+        "currency": "USD", "payment": {"type": "SENDER"}, "date_advance": 0}, "reference":
+        "123", "status": "unknown", "tracking_code": null, "updated_at": "2022-07-28T19:56:23Z",
+        "batch_id": null, "batch_status": null, "batch_message": null, "customs_info":
+        {"id": "cstinfo_469cf31445d646f28fa6b3e636087113", "object": "CustomsInfo",
+        "created_at": "2022-07-28T19:56:23Z", "updated_at": "2022-07-28T19:56:23Z",
+        "contents_explanation": "", "contents_type": "merchandise", "customs_certify":
+        true, "customs_signer": "Steve Brule", "eel_pfc": "NOEEI 30.37(a)", "non_delivery_option":
+        "return", "restriction_comments": null, "restriction_type": "none", "mode":
+        "test", "declaration": null, "customs_items": [{"id": "cstitem_14b90f02fcc94769bb26997a6655cc6c",
+        "object": "CustomsItem", "created_at": "2022-07-28T19:56:23Z", "updated_at":
+        "2022-07-28T19:56:23Z", "description": "Sweet shirts", "hs_tariff_number":
+        "654321", "origin_country": "US", "quantity": 2, "value": "23.0", "weight":
+        11.0, "code": null, "mode": "test", "manufacturer": null, "currency": null,
+        "eccn": null, "printed_commodity_identifier": null}]}, "from_address": {"id":
+        "adr_5b3bb1a00eaf11eda642ac1f6b0a0d1e", "object": "Address", "created_at":
+        "2022-07-28T19:56:23+00:00", "updated_at": "2022-07-28T19:56:23+00:00", "name":
+        "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St", "street2":
+        "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
+        "US", "phone": "5555555555", "email": null, "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_166eb3907f774f51b08e2279d052fb45",
+        "object": "Parcel", "created_at": "2022-07-28T19:56:23Z", "updated_at": "2022-07-28T19:56:23Z",
+        "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
+        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_65b88384a82849a5bf44c5485e190ec2",
+        "object": "Rate", "created_at": "2022-07-28T19:56:23Z", "updated_at": "2022-07-28T19:56:23Z",
+        "mode": "test", "service": "Express", "carrier": "USPS", "rate": "23.75",
+        "currency": "USD", "retail_rate": "27.40", "retail_currency": "USD", "list_rate":
+        "23.75", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        null, "shipment_id": "shp_c5de3b916e4b44b4bba29f25ed3788f7", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_f506e3a68b72421e9fbb0fdf62149fe3",
+        "object": "Rate", "created_at": "2022-07-28T19:56:23Z", "updated_at": "2022-07-28T19:56:23Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.37",
+        "currency": "USD", "retail_rate": "8.70", "retail_currency": "USD", "list_rate":
+        "7.37", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        1, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        1, "shipment_id": "shp_c5de3b916e4b44b4bba29f25ed3788f7", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_d2d34f66463c46c69a02549687607599",
+        "object": "Rate", "created_at": "2022-07-28T19:56:23Z", "updated_at": "2022-07-28T19:56:23Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.49", "currency":
+        "USD", "retail_rate": "5.49", "retail_currency": "USD", "list_rate": "5.49",
+        "list_currency": "USD", "billing_type": "easypost", "delivery_days": 2, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": 2, "shipment_id":
+        "shp_c5de3b916e4b44b4bba29f25ed3788f7", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_a36c9beb2d0e453a93098191d93690b2", "object": "Rate", "created_at":
+        "2022-07-28T19:56:23Z", "updated_at": "2022-07-28T19:56:23Z", "mode": "test",
+        "service": "ParcelSelect", "carrier": "USPS", "rate": "7.22", "currency":
+        "USD", "retail_rate": "7.22", "retail_currency": "USD", "list_rate": "7.22",
+        "list_currency": "USD", "billing_type": "easypost", "delivery_days": 2, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": 2, "shipment_id":
+        "shp_c5de3b916e4b44b4bba29f25ed3788f7", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "refund_status": null, "scan_form": null, "selected_rate": null, "tracker":
+        null, "to_address": {"id": "adr_5b39dcf90eaf11eda63fac1f6b0a0d1e", "object":
+        "Address", "created_at": "2022-07-28T19:56:23+00:00", "updated_at": "2022-07-28T19:56:23+00:00",
+        "name": "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St",
+        "street2": "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107",
+        "country": "US", "phone": "5555555555", "email": null, "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "usps_zone": 1, "return_address": {"id": "adr_5b3bb1a00eaf11eda642ac1f6b0a0d1e",
+        "object": "Address", "created_at": "2022-07-28T19:56:23+00:00", "updated_at":
+        "2022-07-28T19:56:23+00:00", "name": "Jack Sparrow", "company": "EasyPost",
+        "street1": "388 Townsend St", "street2": "Apt 20", "city": "San Francisco",
+        "state": "CA", "zip": "94107", "country": "US", "phone": "5555555555", "email":
+        null, "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
+        null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
+        "adr_5b39dcf90eaf11eda63fac1f6b0a0d1e", "object": "Address", "created_at":
+        "2022-07-28T19:56:23+00:00", "updated_at": "2022-07-28T19:56:23+00:00", "name":
+        "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St", "street2":
+        "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
+        "US", "phone": "5555555555", "email": null, "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "forms": [], "fees": [], "id": "shp_c5de3b916e4b44b4bba29f25ed3788f7",
+        "object": "Shipment"}'
     headers:
       cache-control:
       - no-cache, no-store
       content-length:
-      - '5563'
+      - '5667'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"58df5d4fa41117c1cd32ad7f3be9dde5"
+      - W/"99d3714034be137bff4b9436dd424b05"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_a098dedef5ea41e2b202be32586aad79
+      - /api/v2/shipments/shp_c5de3b916e4b44b4bba29f25ed3788f7
       pragma:
       - no-cache
       referrer-policy:
@@ -70,20 +134,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 78245fb76272e16fe786b9040013b088
+      - 3843704362e2e9e6ff23e2c0003436f5
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb2nuq
+      - bigweb4nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq fde591f008
-      - extlb2nuq c51cdb8bf2
+      - intlb1nuq 403f17ff97
+      - intlb1wdc 403f17ff97
+      - extlb4wdc 403f17ff97
       x-runtime:
-      - '0.361034'
+      - '0.290165'
       x-version-label:
-      - easypost-202205041833-02730cc398-master
+      - easypost-202207272329-7f74c9e58c-master
       x-xss-protection:
       - 1; mode=block
     status:
