--- a/tests/cassettes/test_shipment_smartrate.yaml
+++ b/tests/cassettes/test_shipment_smartrate.yaml
@@ -5,7 +5,8 @@ interactions:
       "state": "CA", "zip": "94107", "phone": "5555555555"}, "from_address": {"name":
       "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St", "street2":
       "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "phone": "5555555555"},
-      "parcel": {"length": "10", "width": "8", "height": "4", "weight": "15.4"}}}'
+      "parcel": {"length": "10", "width": "8", "height": "4", "weight": "15.4"}},
+      "carbon_offset": false}'
     headers:
       Accept:
       - '*/*'
@@ -14,7 +15,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '477'
+      - '501'
       Content-Type:
       - application/json
       authorization:
@@ -25,28 +26,83 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at":"2022-05-04T20:26:20Z","is_return":false,"messages":[],"mode":"test","options":{"currency":"USD","payment":{"type":"SENDER"},"date_advance":0},"reference":null,"status":"unknown","tracking_code":null,"updated_at":"2022-05-04T20:26:20Z","batch_id":null,"batch_status":null,"batch_message":null,"customs_info":null,"from_address":{"id":"adr_75bd5dbecbe811eca52cac1f6bc72124","object":"Address","created_at":"2022-05-04T20:26:20+00:00","updated_at":"2022-05-04T20:26:20+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"insurance":null,"order_id":null,"parcel":{"id":"prcl_cd3139845dde49b5bf40307007de88ed","object":"Parcel","created_at":"2022-05-04T20:26:20Z","updated_at":"2022-05-04T20:26:20Z","length":10.0,"width":8.0,"height":4.0,"predefined_package":null,"weight":15.4,"mode":"test"},"postage_label":null,"rates":[{"id":"rate_aaf15379e5e84ee0a53f33003d4ec6d6","object":"Rate","created_at":"2022-05-04T20:26:21Z","updated_at":"2022-05-04T20:26:21Z","mode":"test","service":"Express","carrier":"USPS","rate":"23.75","currency":"USD","retail_rate":"27.40","retail_currency":"USD","list_rate":"23.75","list_currency":"USD","delivery_days":null,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":null,"shipment_id":"shp_416d520e9b69472382ac70e6b33481e2","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_80e7a16cff97436c9dd9e06c6b6f3934","object":"Rate","created_at":"2022-05-04T20:26:21Z","updated_at":"2022-05-04T20:26:21Z","mode":"test","service":"ParcelSelect","carrier":"USPS","rate":"7.22","currency":"USD","retail_rate":"7.22","retail_currency":"USD","list_rate":"7.22","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_416d520e9b69472382ac70e6b33481e2","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_ae8cd6f2fa504af1bf43768116d8d94e","object":"Rate","created_at":"2022-05-04T20:26:21Z","updated_at":"2022-05-04T20:26:21Z","mode":"test","service":"Priority","carrier":"USPS","rate":"7.37","currency":"USD","retail_rate":"8.70","retail_currency":"USD","list_rate":"7.37","list_currency":"USD","delivery_days":1,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":1,"shipment_id":"shp_416d520e9b69472382ac70e6b33481e2","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_61869bff91874aaab64a1dc01ef4fd5d","object":"Rate","created_at":"2022-05-04T20:26:21Z","updated_at":"2022-05-04T20:26:21Z","mode":"test","service":"First","carrier":"USPS","rate":"5.49","currency":"USD","retail_rate":"5.49","retail_currency":"USD","list_rate":"5.49","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_416d520e9b69472382ac70e6b33481e2","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"}],"refund_status":null,"scan_form":null,"selected_rate":null,"tracker":null,"to_address":{"id":"adr_75bb6ca3cbe811eca52bac1f6bc72124","object":"Address","created_at":"2022-05-04T20:26:20+00:00","updated_at":"2022-05-04T20:26:20+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"usps_zone":1,"return_address":{"id":"adr_75bd5dbecbe811eca52cac1f6bc72124","object":"Address","created_at":"2022-05-04T20:26:20+00:00","updated_at":"2022-05-04T20:26:20+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"buyer_address":{"id":"adr_75bb6ca3cbe811eca52bac1f6bc72124","object":"Address","created_at":"2022-05-04T20:26:20+00:00","updated_at":"2022-05-04T20:26:20+00:00","name":"Jack
-        Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"forms":[],"fees":[],"id":"shp_416d520e9b69472382ac70e6b33481e2","object":"Shipment"}'
+      string: '{"created_at": "2022-07-28T19:56:20Z", "is_return": false, "messages":
+        [], "mode": "test", "options": {"currency": "USD", "payment": {"type": "SENDER"},
+        "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
+        null, "updated_at": "2022-07-28T19:56:20Z", "batch_id": null, "batch_status":
+        null, "batch_message": null, "customs_info": null, "from_address": {"id":
+        "adr_59a4787f0eaf11ed8f70ac1f6bc7bdc6", "object": "Address", "created_at":
+        "2022-07-28T19:56:20+00:00", "updated_at": "2022-07-28T19:56:20+00:00", "name":
+        "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St", "street2":
+        "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
+        "US", "phone": "5555555555", "email": null, "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "insurance": null, "order_id": null, "parcel": {"id": "prcl_39d9e35e00e84edba94a2c9ead67eab3",
+        "object": "Parcel", "created_at": "2022-07-28T19:56:20Z", "updated_at": "2022-07-28T19:56:20Z",
+        "length": 10.0, "width": 8.0, "height": 4.0, "predefined_package": null, "weight":
+        15.4, "mode": "test"}, "postage_label": null, "rates": [{"id": "rate_12e3f878d36446369a560637c41160ef",
+        "object": "Rate", "created_at": "2022-07-28T19:56:20Z", "updated_at": "2022-07-28T19:56:20Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "7.37",
+        "currency": "USD", "retail_rate": "8.70", "retail_currency": "USD", "list_rate":
+        "7.37", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        1, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        1, "shipment_id": "shp_a4309fb2a5e4463dae2b785e36fd6076", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_f2dafa41e7c74841845c0f1c7e43427c",
+        "object": "Rate", "created_at": "2022-07-28T19:56:20Z", "updated_at": "2022-07-28T19:56:20Z",
+        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "7.22",
+        "currency": "USD", "retail_rate": "7.22", "retail_currency": "USD", "list_rate":
+        "7.22", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        2, "shipment_id": "shp_a4309fb2a5e4463dae2b785e36fd6076", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, {"id": "rate_56935feac32541ccb51057f8c42bba56",
+        "object": "Rate", "created_at": "2022-07-28T19:56:20Z", "updated_at": "2022-07-28T19:56:20Z",
+        "mode": "test", "service": "First", "carrier": "USPS", "rate": "5.49", "currency":
+        "USD", "retail_rate": "5.49", "retail_currency": "USD", "list_rate": "5.49",
+        "list_currency": "USD", "billing_type": "easypost", "delivery_days": 2, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": 2, "shipment_id":
+        "shp_a4309fb2a5e4463dae2b785e36fd6076", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"},
+        {"id": "rate_65ad3ee2a10f47d5a9d517dfce1e1a8f", "object": "Rate", "created_at":
+        "2022-07-28T19:56:20Z", "updated_at": "2022-07-28T19:56:20Z", "mode": "test",
+        "service": "Express", "carrier": "USPS", "rate": "23.75", "currency": "USD",
+        "retail_rate": "27.40", "retail_currency": "USD", "list_rate": "23.75", "list_currency":
+        "USD", "billing_type": "easypost", "delivery_days": null, "delivery_date":
+        null, "delivery_date_guaranteed": false, "est_delivery_days": null, "shipment_id":
+        "shp_a4309fb2a5e4463dae2b785e36fd6076", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e"}],
+        "refund_status": null, "scan_form": null, "selected_rate": null, "tracker":
+        null, "to_address": {"id": "adr_59a248af0eaf11ed9f68ac1f6bc7b362", "object":
+        "Address", "created_at": "2022-07-28T19:56:20+00:00", "updated_at": "2022-07-28T19:56:20+00:00",
+        "name": "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St",
+        "street2": "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107",
+        "country": "US", "phone": "5555555555", "email": null, "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "usps_zone": 1, "return_address": {"id": "adr_59a4787f0eaf11ed8f70ac1f6bc7bdc6",
+        "object": "Address", "created_at": "2022-07-28T19:56:20+00:00", "updated_at":
+        "2022-07-28T19:56:20+00:00", "name": "Jack Sparrow", "company": "EasyPost",
+        "street1": "388 Townsend St", "street2": "Apt 20", "city": "San Francisco",
+        "state": "CA", "zip": "94107", "country": "US", "phone": "5555555555", "email":
+        null, "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
+        null, "state_tax_id": null, "verifications": {}}, "buyer_address": {"id":
+        "adr_59a248af0eaf11ed9f68ac1f6bc7b362", "object": "Address", "created_at":
+        "2022-07-28T19:56:20+00:00", "updated_at": "2022-07-28T19:56:20+00:00", "name":
+        "Jack Sparrow", "company": "EasyPost", "street1": "388 Townsend St", "street2":
+        "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
+        "US", "phone": "5555555555", "email": null, "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, "forms": [], "fees": [], "id": "shp_a4309fb2a5e4463dae2b785e36fd6076",
+        "object": "Shipment"}'
     headers:
       cache-control:
       - no-cache, no-store
       content-length:
-      - '4729'
+      - '4833'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"c53d98709b606b3d31035f17d8052306"
+      - W/"7460e1945a48f18ecadc69a8b282e97f"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_416d520e9b69472382ac70e6b33481e2
+      - /api/v2/shipments/shp_a4309fb2a5e4463dae2b785e36fd6076
       pragma:
       - no-cache
       referrer-policy:
@@ -62,20 +118,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 78245fba6272e16ce786b8e80013b003
+      - 3843704262e2e9e4ff23e2bc00343650
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb6nuq
+      - bigweb5nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq fde591f008
-      - extlb2nuq c51cdb8bf2
+      - intlb2nuq 403f17ff97
+      - intlb1wdc 403f17ff97
+      - extlb4wdc 403f17ff97
       x-runtime:
-      - '0.264893'
+      - '0.285017'
       x-version-label:
-      - easypost-202205041833-02730cc398-master
+      - easypost-202207272329-7f74c9e58c-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -95,10 +152,44 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/shipments/shp_416d520e9b69472382ac70e6b33481e2/smartrate
+    uri: https://api.easypost.com/v2/shipments/shp_a4309fb2a5e4463dae2b785e36fd6076/smartrate
   response:
     body:
-      string: '{"result":[{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-05-04T20:26:21Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":null,"est_delivery_days":null,"id":"rate_aaf15379e5e84ee0a53f33003d4ec6d6","list_currency":"USD","list_rate":23.75,"mode":"test","object":"Rate","rate":23.75,"retail_currency":"USD","retail_rate":27.4,"service":"Express","shipment_id":"shp_416d520e9b69472382ac70e6b33481e2","time_in_transit":{"percentile_50":1,"percentile_75":1,"percentile_85":1,"percentile_90":1,"percentile_95":2,"percentile_97":2,"percentile_99":4},"updated_at":"2022-05-04T20:26:21Z"},{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-05-04T20:26:21Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":2,"est_delivery_days":2,"id":"rate_80e7a16cff97436c9dd9e06c6b6f3934","list_currency":"USD","list_rate":7.22,"mode":"test","object":"Rate","rate":7.22,"retail_currency":"USD","retail_rate":7.22,"service":"ParcelSelect","shipment_id":"shp_416d520e9b69472382ac70e6b33481e2","time_in_transit":{"percentile_50":1,"percentile_75":2,"percentile_85":3,"percentile_90":3,"percentile_95":4,"percentile_97":5,"percentile_99":7},"updated_at":"2022-05-04T20:26:21Z"},{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-05-04T20:26:21Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":1,"est_delivery_days":1,"id":"rate_ae8cd6f2fa504af1bf43768116d8d94e","list_currency":"USD","list_rate":7.37,"mode":"test","object":"Rate","rate":7.37,"retail_currency":"USD","retail_rate":8.7,"service":"Priority","shipment_id":"shp_416d520e9b69472382ac70e6b33481e2","time_in_transit":{"percentile_50":1,"percentile_75":1,"percentile_85":1,"percentile_90":1,"percentile_95":2,"percentile_97":2,"percentile_99":3},"updated_at":"2022-05-04T20:26:21Z"},{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-05-04T20:26:21Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":2,"est_delivery_days":2,"id":"rate_61869bff91874aaab64a1dc01ef4fd5d","list_currency":"USD","list_rate":5.49,"mode":"test","object":"Rate","rate":5.49,"retail_currency":"USD","retail_rate":5.49,"service":"First","shipment_id":"shp_416d520e9b69472382ac70e6b33481e2","time_in_transit":{"percentile_50":1,"percentile_75":1,"percentile_85":1,"percentile_90":2,"percentile_95":2,"percentile_97":2,"percentile_99":3},"updated_at":"2022-05-04T20:26:21Z"}]}'
+      string: '{"result": [{"carrier": "USPS", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e",
+        "created_at": "2022-07-28T19:56:20Z", "currency": "USD", "delivery_date":
+        null, "delivery_date_guaranteed": false, "delivery_days": 1, "est_delivery_days":
+        1, "id": "rate_12e3f878d36446369a560637c41160ef", "list_currency": "USD",
+        "list_rate": 7.37, "mode": "test", "object": "Rate", "rate": 7.37, "retail_currency":
+        "USD", "retail_rate": 8.7, "service": "Priority", "shipment_id": "shp_a4309fb2a5e4463dae2b785e36fd6076",
+        "time_in_transit": {"percentile_50": 1, "percentile_75": 1, "percentile_85":
+        2, "percentile_90": 2, "percentile_95": 2, "percentile_97": 3, "percentile_99":
+        6}, "updated_at": "2022-07-28T19:56:20Z"}, {"carrier": "USPS", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e", "created_at": "2022-07-28T19:56:20Z",
+        "currency": "USD", "delivery_date": null, "delivery_date_guaranteed": false,
+        "delivery_days": 2, "est_delivery_days": 2, "id": "rate_f2dafa41e7c74841845c0f1c7e43427c",
+        "list_currency": "USD", "list_rate": 7.22, "mode": "test", "object": "Rate",
+        "rate": 7.22, "retail_currency": "USD", "retail_rate": 7.22, "service": "ParcelSelect",
+        "shipment_id": "shp_a4309fb2a5e4463dae2b785e36fd6076", "time_in_transit":
+        {"percentile_50": 2, "percentile_75": 3, "percentile_85": 3, "percentile_90":
+        4, "percentile_95": 5, "percentile_97": 5, "percentile_99": 8}, "updated_at":
+        "2022-07-28T19:56:20Z"}, {"carrier": "USPS", "carrier_account_id": "ca_b25657e9896e4d63ac8151ac346ac41e",
+        "created_at": "2022-07-28T19:56:20Z", "currency": "USD", "delivery_date":
+        null, "delivery_date_guaranteed": false, "delivery_days": 2, "est_delivery_days":
+        2, "id": "rate_56935feac32541ccb51057f8c42bba56", "list_currency": "USD",
+        "list_rate": 5.49, "mode": "test", "object": "Rate", "rate": 5.49, "retail_currency":
+        "USD", "retail_rate": 5.49, "service": "First", "shipment_id": "shp_a4309fb2a5e4463dae2b785e36fd6076",
+        "time_in_transit": {"percentile_50": 1, "percentile_75": 1, "percentile_85":
+        2, "percentile_90": 2, "percentile_95": 2, "percentile_97": 2, "percentile_99":
+        3}, "updated_at": "2022-07-28T19:56:20Z"}, {"carrier": "USPS", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e", "created_at": "2022-07-28T19:56:20Z",
+        "currency": "USD", "delivery_date": null, "delivery_date_guaranteed": false,
+        "delivery_days": null, "est_delivery_days": null, "id": "rate_65ad3ee2a10f47d5a9d517dfce1e1a8f",
+        "list_currency": "USD", "list_rate": 23.75, "mode": "test", "object": "Rate",
+        "rate": 23.75, "retail_currency": "USD", "retail_rate": 27.4, "service": "Express",
+        "shipment_id": "shp_a4309fb2a5e4463dae2b785e36fd6076", "time_in_transit":
+        {"percentile_50": 1, "percentile_75": 1, "percentile_85": 1, "percentile_90":
+        2, "percentile_95": 2, "percentile_97": 2, "percentile_99": 4}, "updated_at":
+        "2022-07-28T19:56:20Z"}]}'
     headers:
       cache-control:
       - no-cache, no-store
@@ -107,7 +198,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"d5d74a4b7deb530601e214072e10f606"
+      - W/"19327c3bc15f395e4403da3c99f2e8d8"
       expires:
       - '0'
       pragma:
@@ -125,20 +216,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 78245fba6272e16de786b8e80013b019
+      - 3843704262e2e9e4ff23e2bc00343670
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb6nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq fde591f008
-      - extlb2nuq c51cdb8bf2
+      - intlb2nuq 403f17ff97
+      - intlb2wdc 403f17ff97
+      - extlb4wdc 403f17ff97
       x-runtime:
-      - '0.067440'
+      - '0.087560'
       x-version-label:
-      - easypost-202205041833-02730cc398-master
+      - easypost-202207272329-7f74c9e58c-master
       x-xss-protection:
       - 1; mode=block
     status:
